--- a/css/custom.css
+++ b/css/custom.css
@@ -39,14 +39,14 @@
     background-color: #131313 !important;
 }
 
-.nav-list {
+/* .nav-list {
     font-family: 'Courier New', Courier, monospace;
     font-style: italic;
     font-size: 18px;
     font-weight: bold;
     letter-spacing: 1px;
     text-transform: uppercase;
-}
+} */
 
 .video-custom {
     width: 100%;
@@ -59,4 +59,21 @@
     width: 100%;
     height: 250px;
     object-fit: cover;
+}
+.dsk-logo .nav-brand img {
+    max-height: 110px;
+    width: 120px;
+}
+.site-title h3 {
+    color: #f12c30; 
+    text-transform: uppercase; /* Optional: Makes text uppercase */
+}
+.sub-menu-section{
+    background-color: #f12c30;
+}
+.sub-menu-column ul li a{
+    color: #fff;
+}
+.contact-icons img{
+    border-radius: 30px;
 }
