--- a/css/custom.css
+++ b/css/custom.css
@@ -77,3 +77,26 @@
 .contact-icons img{
     border-radius: 30px;
 }
+/* floating action button whatsapp */
+.fab-whatsapp {
+    position: fixed;
+    bottom: 100px;
+    right: 20px;
+    background-color: #25d366;
+    border-radius: 50%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.fab-whatsapp img {
+    width: 40px;
+    height: 40px;
+}
+
+.fab-whatsapp:hover {
+    background-color: #128c7e;
+    /* Darker green on hover */
+}
